created abou page

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,3 +7,6 @@
 @import "../components/followOurChannel/followOurChannel.scss";
 @import "../components/sectionSquares/sectionSquares.scss";
 @import "../components/footer/footer.scss";
+@import "../components/sectionHistory/sectionHistory.scss";
+@import "../components/sectionJoinUs/sectionJoinUs.scss";
+@import "../components/sectionVimeo/sectionVimeo.scss";
