--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -41,11 +41,11 @@ footer {
 }
 
 .footer--info {
-	//	color: $color-grey;
+	color: #7a7a7a;
 	text-align: center;
 
 	a {
-		//	color: $color-grey;
+		color: #7a7a7a;
 		transition: 0.3s;
 
 		&:hover {
