--- a/src/components/sectionHeadBanner/sectionHeadBanner.scss
+++ b/src/components/sectionHeadBanner/sectionHeadBanner.scss
@@ -3,10 +3,6 @@
 	width: 100%;
 	height: 500px;
 
-	/*  background: url(https://images.prismic.io/carlostest/7ec0c5fc-8f5b-40bd-9dd9-8639de70c70a_burgers.jpg?auto=compress,format);
-    background-position: center;
-    background-size: cover; */
-
 	h1 {
 		position: absolute;
 		right: 0;
@@ -20,6 +16,7 @@
 	img {
 		object-fit: cover;
 		width: 100%;
+		max-height: 500px;
 	}
 
 	svg {
