--- a/src/components/sectionHeadBanner/sectionHeadBanner.scss
+++ b/src/components/sectionHeadBanner/sectionHeadBanner.scss
@@ -3,6 +3,14 @@
 	width: 100%;
 	height: 500px;
 
+	@include md {
+		height: 350px;
+	}
+
+	@include sm {
+		height: 250px;
+	}
+
 	h1 {
 		position: absolute;
 		right: 0;
@@ -11,30 +19,27 @@
 		margin: 0.67em 0;
 		font-size: 5em;
 		text-align: center;
+
+		@include sm {
+			font-size: 3rem;
+		}
 	}
 
 	img {
 		object-fit: cover;
 		width: 100%;
 		max-height: 500px;
+
+		@include md {
+			height: 350px;
+		}
+
+		@include sm {
+			height: 250px;
+		}
 	}
 
 	svg {
 		fill: #ffffff;
-	}
-}
-
-@media only screen and (width <= 700px) {
-	.header {
-		height: 250px;
-
-		.header h1 {
-			font-size: 3rem;
-		}
-
-		.header-nav li {
-			padding: 5px 10px;
-			margin: 0 5px;
-		}
 	}
 }
