--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,3 +10,5 @@
 @import "../components/sectionHistory/sectionHistory.scss";
 @import "../components/sectionJoinUs/sectionJoinUs.scss";
 @import "../components/sectionVimeo/sectionVimeo.scss";
+@import "../components/sectionLocations/sectionLocations.scss";
+@import "../components/sectionCarousel/sectionCarousel.scss";
