created contact page

--- a/src/components/sectionHeadBanner/sectionHeadBanner.scss
+++ b/src/components/sectionHeadBanner/sectionHeadBanner.scss
@@ -19,6 +19,7 @@
 		margin: 0.67em 0;
 		font-size: 5em;
 		text-align: center;
+		text-transform: uppercase;
 
 		@include sm {
 			font-size: 3rem;
