--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,3 +12,5 @@
 @import "../components/sectionVimeo/sectionVimeo.scss";
 @import "../components/sectionLocations/sectionLocations.scss";
 @import "../components/sectionCarousel/sectionCarousel.scss";
+@import "../components/sectionContactForm/sectionContactForm.scss";
+@import "../components/rrss/rrss.scss";
